<resources>
    <!--1-普通量-->
    <string name="app_name">MaterialTemplate</string>
    <string name="navigation_drawer_open">openDrawer</string>
    <string name="navigation_drawer_close">closeDrawer</string>

    <!--2-DrawerNavMenu中的菜单项的标题-->
    <!--功能-->
    <string name="drawer_nav_group_function">功能</string>
    <string name="drawer_nav_title_0">0</string>
    <string name="drawer_nav_title_1">1</string>
    <string name="drawer_nav_title_2">2</string>
    <!--选项-->
    <string name="drawer_nav_group_options">选项</string>
    <string name="drawer_nav_title_3">3</string>
    <string name="drawer_nav_title_4">4</string>
    <string name="drawer_nav_title_5">设置</string>

    <!--3-BottomNavMenu中的菜单项的标题-->
    <string name="bottom_nav_title_0">0</string>
    <string name="bottom_nav_title_1">1</string>
    <string name="bottom_nav_title_2">2</string>

    <!--4-TabLayout和ViewPager(Fragment联动)的标题-->
    <string name="tab_vf_title_0">日报</string>
    <string name="tab_vf_title_1">主题</string>
    <string name="tab_vf_title_2">专栏</string>
    <string name="tab_vf_title_3">热门</string>

    <!--5-Preference个人喜好相关内容-->
    <string name="preference_category_title_0">通用</string>
    <string name="preference_category_title_1">其它说明</string>
    <string name="preference_key_0">save_net_mode</string>
    <string name="preference_key_1">light_mode</string>
    <string name="preference_key_2">clear_cache</string>
    <string name="preference_key_3">check_updates</string>
    <string name="preference_key_4">project_address</string>
    <string name="preference_title_0">省流量模式</string>
    <string name="preference_title_1">夜间模式</string>
    <string name="preference_title_2">清空缓存</string>
    <string name="preference_title_3">检查更新</string>
    <string name="preference_title_4">项目的GitHub地址</string>
    <string name="preference_summary_0">仅在Wi-Fi环境下才自动加载图片</string>
    <string name="preference_summary_1"></string>
    <string name="preference_summary_2">删除已缓存的文章内容及图片</string>
    <string name="preference_summary_3">当前版本号 V1.0</string>
    <string name="preference_summary_4">https://github.com/lyc-changeworld/MaterialTemplate</string>




</resources>
